[package]
name = "hashed_password"
version = "1.1.0"
edition = "2021"
description = "Password hasher"
resolver = "1"
license = "MIT"
keywords = [
    "hash",
    "password"
]
repository = "https://github.com/caojen/password_hasher"

[features]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
rand = { version = "0.8" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
sqlx = { package = "sqlx", version = "*", optional = true }
